# HPC2020

MatrixMult/: Makefile  ReadMe.md  main.cpp  matrix.cpp  matrix.h
OpenMP/: CMakeLists.txt  omp_bugparfor.c  omp_bugreduction.c  omp_monte_carlo_pi.c
PageRank/: Makefile  epl-2019-GMTStandardTime.csv  main.cpp  matrix.cpp  matrix.h  pagerank.cpp  pagerank.h  slurm-431.out  submit_hw4.sl
